--- a/index.css
+++ b/index.css
@@ -173,6 +173,7 @@ right: 20px;
     justify-content: center;
     align-items: center; 
     background-color: white;
+    border: 1px solid rgb(225, 169, 169);
     
 }
 .box img{
